@@ -1,3 +1,15 @@
+2008-07-02 Stephen Hemminger <stephen.hemminger@vyatta.com>
+
+	* bgp_table.{c,h}: (bgp_table_finish) Take a double pointer and 
+	  scrub pointer in caller, so fixing double-free crashes seen
+	  with route-server-client configuration.
+	* *.c: Adjust all callers of bgp_table_finish
+
+2008-07-02 Paul Jakma <paul.jakma@sun.com>
+
+	* bgp_table.{c,h}: (bgp_node_delete, bgp_table_free) shouldn't be
+	  exported.
+	
 2008-06-07 Paul Jakma <paul@jakma.org>
 
 	* bgp_attr.{c,h}: (bgp_mp_{un,}reach_parse) export, for unit tests.
